--- a/public/web/index.html
+++ b/public/web/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav>
-            Concert Booking
+            <span>Concert Booking</span>
         </nav>
         <section class="main">
             <h2>Near you</h2>
